Grammar/tests/unity/success/vector-use-1.top
start () {
    operation[a] = anything;
    operation[b][c] = anotherThing[a];
}