Grammar/tests/unity/error/function-without-return-type.top
function functionName () {
    functionName();
    anotherVar = functionName();
}
